# corgi-lang

./: AST.h  CMakeLists.txt  README.md
notes/: types.md
src/: AST.cpp  AST.h  CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  test.corgi  token.h
